prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoreo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""
spec:
  rules:
  - host: dev-env.grupo13.com
    http:
      paths:
      - pathType: Prefix
        path: /services/prometheus
        backend:
          service:
            name: prometheus
            port:
              number: 9090
